--- a/source/_posts/代理模式.md
+++ b/source/_posts/代理模式.md
@@ -10,6 +10,8 @@ categories: JAVA
 
 ![这里写图片描述](http://img.blog.csdn.net/20170504073942555?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQvenhpYW5nMjQ4/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/SouthEast)
 
+<!-- more -->
+
 ## 静态代理
 ### 简单实例
 **Subject.java**
