--- a/source/_posts/简单工厂模式.md
+++ b/source/_posts/简单工厂模式.md
@@ -8,6 +8,9 @@ categories: JAVA
 >简单的工厂模式:通过加载传入的字符串，返回所需特定的实现类创建的对象
 
 ![这里写图片描述](http://img.blog.csdn.net/20170504080234994?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQvenhpYW5nMjQ4/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/SouthEast)
+
+<!-- more -->
+
 **接口Operation及其各种的实现类**
 
 ```
